Fix modular Java options